@@ -119,7 +119,8 @@ void deallocLocal (struct symbol *);
 int allocVariables (struct symbol *);
 void overlay2Set ();
 void overlay2data ();
-void redoStackOffsets ();
+void clearStackOffsets (void);
+void redoStackOffsets (void);
 void printAllocInfo (struct symbol *, struct dbuf_s *);
 void doOverlays (struct eBBlock **, int count);
 void deleteFromSeg(struct symbol *);
